k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smarthotel-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: smarthotel-server
  template:
    metadata:
      labels:
        component: smarthotel-server
    spec:
      containers:
        - name: smarthotel-server
          image: shamirj/smarthotel-server
          ports:
            - containerPort: 3000
            # - dnsPolicy: Default
              # resources:
              #   requests:
              #     memory: "64Mi"
              #     cpu: "250m"
              #   limits:
              #     memory: "128Mi"
              #     cpu: "500m"
