k8s/client-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - port: 5050
      targetPort: 5000
      nodePort: 30300
  selector:
    component: smarthotel-client
