k8s/qrcode-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrcode-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: smarthotel-qrcode
  ports:
    - port: 8080
      targetPort: 8080
